supabase-imgproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-imgproxy
  labels:
    workload: supabase-imgproxy
  namespace: supabase
spec:
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    workload: supabase-imgproxy
